syntax = "proto3";
package grepsvc;

option go_package = "/grepsvc;grepsvc";

service GrepService {
    rpc ProcessChunk(ChunkRequest) returns (ChunkResponse);
}

message GrepOptions {
    string pattern = 1; 
    int64 after = 2;
    int64 before = 3;
    int64 around = 4;
    bool count = 5;
    bool ignore_case = 6;
    bool invert = 7;
    bool fixed = 8;
    bool line_num = 9;
}

message Match {
    bytes content = 1;
    int64 line_number = 2;
}

message ChunkRequest {
    string task_id = 1;
    bytes data = 2;
    int64 chunk_index = 3;
    repeated int64 line_numbers = 4;
    GrepOptions options = 5;
}

message ChunkResponse {
    string task_id = 1;
    repeated Match matches = 2;
    int64 match_count = 3;
    string error = 4;    
}